Possibly fixed crash with FastLeafDecay (?)